<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/profile_icon"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_self_defense"
            android:icon="@drawable/self_defense_icon"
            android:title="@string/menu_self_defense" />

        <item
            android:id="@+id/nav_informative"
            android:icon="@drawable/informative_icon"
            android:title="@string/menu_informative" />
        <item
            android:id="@+id/nav_route"
            android:icon="@drawable/map_icon"
            android:title="@string/menu_route" />
        <item
            android:id="@+id/nav_alert"
            android:icon="@drawable/alert_icon"
            android:title="@string/menu_alert" />

        <item
            android:id="@+id/nav_comunity"
            android:icon="@drawable/comunity_icon"
            android:title="@string/menu_comunity" />

        <item
            android:id="@+id/nav_helping_network"
            android:icon="@drawable/helping_network_icon"
            android:title="@string/menu_helping_network" />





    </group>
</menu>