<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/rounded_layout"
            android:padding="10dp"
            android:layout_margin="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/account_info_label"
                android:textStyle="bold"
                android:textSize="24sp"
                android:textColor="@color/white"
                />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imagen_perfil_usuaria"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                app:civ_border_width="3dp"
                app:civ_border_color="@color/white"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/text_view_nombre_perfil_usuaria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/hello_user_label"
                android:textSize="22sp"
                android:textColor="@color/white"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/text_view_correo_perfil_usuaria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/email_label"
                android:textSize="20sp"
                android:layout_marginTop="3dp"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/edit_text_descripcion_perfil_usuaria"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/rounded_layout"
                android:hint="@string/add_a_description"
                android:inputType="text|textMultiLine"
                android:padding="10dp"
                android:gravity="top"
                android:layout_marginTop="10dp"
                android:maxLength="150"
                android:textColor="@color/white"
                android:textColorHint="@color/Light_Gray"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/modify_account_info"
                android:textColor="@color/white"
                android:layout_marginTop="15dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:orientation="horizontal"
                android:layout_marginTop="5dp">

                <EditText
                    android:id="@+id/edit_text_nombre_perfil_usuaria"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:hint="@string/account_info_label_name"
                    android:textColor="@color/white"
                    android:textColorHint="@color/Light_Gray"
                    />

                <EditText
                    android:id="@+id/edit_text_apellido_paterno_perfil_usuaria"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:hint="@string/account_info_label_ap_p"
                    android:textColor="@color/white"
                    android:textColorHint="@color/Light_Gray"/>

                <EditText
                    android:id="@+id/edit_text_apellido_materno_perfil_usuaria"
                    android:layout_width="0dp"
                    android:layout_weight="1.5"
                    android:layout_height="wrap_content"
                    android:hint="@string/account_info_label_ap_m"
                    android:textColor="@color/white"
                    android:textColorHint="@color/Light_Gray"/>

            </LinearLayout>

            <EditText
                android:id="@+id/edit_text_new_password_perfil_usuaria"
                android:layout_width="match_parent"
                android:layout_weight="1.5"
                android:layout_height="wrap_content"
                android:hint="@string/account_info_label_new_password"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHint="@color/Light_Gray"/>

            <EditText
                android:id="@+id/edit_text_password_perfil_usuaria"
                android:layout_width="match_parent"
                android:layout_weight="1.5"
                android:layout_height="wrap_content"
                android:hint="@string/account_info_label_confirm_password"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHint="@color/Light_Gray" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/boton_guardar_cambios_perfil_usuaria"
                android:layout_width="266dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@drawable/confirm_button"
                android:drawableEnd="@drawable/check_circle_foreground"
                android:paddingHorizontal="10dp"
                android:text="@string/account_info_label_save_changes"
                android:textColor="@android:color/white"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/rounded_layout"
            android:padding="10dp"
            android:layout_margin="5dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/account_info_label_web_users"
                android:textStyle="bold"
                android:textSize="24sp"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/account_info_label_delete_web_user"
                android:layout_marginTop="10dp"
                android:textColor="@color/white" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewUsuariosConfianza"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/boton_notificaciones"
            android:layout_width="266dp"
            android:layout_height="wrap_content"
            android:background="@drawable/confirm_button"
            android:paddingHorizontal="10dp"
            android:text="@string/account_info_label_notifications"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:layout_gravity="center"
            android:layout_marginTop="3dp"/>
    </LinearLayout>



</ScrollView>