<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Login_Layout_Background">

    <TextView
        android:id="@+id/QuestionNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/no_question"
        android:textColor="@color/white"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:gravity="start" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_marginBottom="300dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/question"
            android:layout_margin="5dp"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold|italic" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="300dp"
        android:layout_marginTop="100dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/TrueAnswer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/question_button"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:text="@string/TrueAnswer" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/SometimesAnswer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/question_button"
            android:textColor="@color/white"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            android:text="@string/SometimesAnswer" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="200dp"
        android:layout_marginTop="30dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/SeldomAnswer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/question_button"
            android:textColor="@color/white"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            android:text="@string/SeldomAnswer" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/NeverAnswer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/question_button"
            android:textColor="@color/white"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            android:text="@string/NeverAnswer" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/test_complete_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/test_result"
            android:layout_gravity="center"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/ResultsButton"
            android:layout_width="139dp"
            android:layout_height="wrap_content"
            android:background="@drawable/confirm_button"
            android:textColor="@color/white"
            android:text="@string/ResultsButton"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"/>
    </LinearLayout>


</RelativeLayout>