<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfigureAlertActivity"
    android:background="@color/purple_Light">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="80dp"
        android:layout_height="78dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/logo_shape"
        android:src="@drawable/logo_app"
        />

    <TextView
        android:id="@+id/labelMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/edit_text_margin"
        android:gravity="center"
        android:text="@string/whatsapp_alert_message"
        android:textColor="@color/white"
        android:textColorHighlight="@color/black"
        android:textColorHint="@color/Gray"
        android:textSize="15sp"
        android:layout_marginTop="15dp"/>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="10dp">

    <TextView
        android:id="@+id/TextViewChooseMessageOption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_option"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:layout_marginStart="10dp"
       />

    <Spinner
        android:id="@+id/SpinnerAlert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
</LinearLayout>

    <ImageView
        android:id="@+id/IconTypeAlert"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/logo_shape"
        android:src="@drawable/logo_app"/>

    <TextView
        android:id="@+id/TextViewWriteMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/write_message"
        android:gravity="center"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/edit_text_mensaje"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:inputType="text|textMultiLine"
        android:gravity="top"
        android:background="@drawable/edit_text_shape"
        android:hint="@string/message_max_100"
        android:importantForAutofill="no"
        android:padding="10sp"
        android:textColor="@color/Gray_highlight"
        android:textColorHighlight="@color/black"
        android:textColorHint="@color/Gray"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="3dp"
        android:maxLength="100" />

    <TextView
        android:id="@+id/TextViewAddImageAlert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="15dp"
        android:text="@string/insert_an_image"
        android:gravity="center"
        android:textColor="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <ImageView
            android:id="@+id/imageAlert"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="25dp"
            android:src="@drawable/instagram_profile_image"/>

        <ImageView
            android:id="@+id/ButtonAddImageAlert"
        android:layout_width="50dp"
        android:layout_height="50dp"
            android:layout_marginStart="15dp"
        android:src="@drawable/add_image_icon"
            android:layout_marginTop="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/TextViewChooseContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_contact"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_marginStart="10dp"
            />

        <Spinner
            android:id="@+id/SpinnerContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            />
    </LinearLayout>

    <CheckBox
        android:id="@+id/checkbox_compartir_ubicacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share_location"
        android:textColor="@color/white"
        android:layout_marginStart="10dp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/saveAlertButton"
        android:layout_width="139dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingHorizontal="10dp"
        android:background="@drawable/confirm_button"
        android:drawableEnd="@drawable/check_circle_foreground"
        android:gravity="center"
        android:text="@string/save_label"
        android:layout_marginStart="230dp"
        android:textColor="@color/white"
        android:textSize="15sp" />

    </LinearLayout>

</ScrollView>